# MIB-Studio

./: .Cursorrules  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Dockerfile  README.md  TODO.md  ai_instructions.md  deploy_qt.ps1  vcpkg.json
EGrabber/: .gitignore  image.cpp
EGrabber/lib/image_processing/: image_processing.h
EGrabber/mib_grabber/: CMakeLists.txt
EGrabber/mib_grabber/src/: main.cpp
EGrabber/mib_grabber/src/tests/: cgy_test.cpp  main_optimize_test.cpp  main_test.cpp  process_load_test.cpp  process_speed_test.cpp
EGrabber/mock_grabber/: CMakeLists.txt
EGrabber/mock_grabber/lib/CircularBuffer/: CircularBuffer.cpp
EGrabber/mock_grabber/lib/image_processing/: image_processing_utils.cpp
EGrabber/mock_grabber/src/: main.cpp
EGrabber/mock_grabber/src/tests/: image.cpp  main_test.cpp  performance_test.cpp
apps/cli/: main.cpp
apps/tui_qt/: main.cpp
include/: config.json  egrabberConfig.js
include/CircularBuffer/: CircularBuffer.h
include/Coremor/: XMT_DLL_SER.h  XMT_DLL_SER.lib
include/image_processing/: image_processing.h
include/menu_system/: menu_system.h
include/mib/api/: Frame.h  IMibController.h  MibFactory.h  Observer.h
include/mib/core/grabber/: mib_grabber.h
include/mib/core/image_processing/: IImageProcessor.h
include/mib_grabber/: mib_grabber.h
include/utils/: cv_qt_convert.h
knowledge_map/task/: remove_contrast_enhancement.md
lib/CircularBuffer/: CircularBuffer.h
lib/image_processing/: image_processing.h  image_processing_core.cpp  image_processing_threads.cpp  image_processing_utils.cpp
lib/menu_system/: menu_system.cpp  menu_system.h
memory-bank/: .cursorrules  activeContext.md  productContext.md  progress.md  projectbrief.md  qt_transition_plan.md  systemPatterns.md  techContext.md
mib_grabber/lib/image_processing/: image_processing.h  image_processing_core.cpp  image_processing_utils.cpp
resources/: resources.qrc
src/: main.cpp
src/CircularBuffer/: CircularBuffer.cpp
src/api/: MibController.cpp  dummy.cpp
src/core/grabber/: mib_grabber.cpp
src/core/image_processing/: image_processing_core.cpp  image_processing_threads.cpp  image_processing_utils.cpp
src/image_processing/: image_processing_core.cpp  image_processing_threads.cpp  image_processing_utils.cpp  trajectory_processing.cpp
src/menu_system/: menu_system.cpp
src/mib_grabber/: mib_grabber.cpp
src/qt/: ImageWindow.cpp  ImageWindow.h  QtMibController.cpp  QtMibController.h  dummy.cpp  main_window.cpp  main_window.h
src/qt_ui/: ImageView.cpp  ImageView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  QtUtils.cpp  QtUtils.h
src/resources/: resources.qrc
src/tests/: 1920x1080.js  512x96.js  config.json  main_test.cpp  mock_grabber.cpp  qt_test.cpp
